# nixspace

./: Cargo.toml  README.md  default.nix  flake.nix
lib/: call-flake.nix  create-workspace.nix  default.nix  mk-workspace-env.nix  mk-workspace.nix
src/: cli.rs  config.rs  flake.rs  lockfile.rs  main.rs  util.rs  workspace.rs
src/snapshots/: ns__cli__git_tests__ls_remote.snap  ns__cli__nix_tests__flake_metadata.snap  ns__cli__nix_tests__flake_prefetch.snap
templates/basic/: flake.nix  nixspace.toml
templates/basic/.nixspace/: local.json
templates/flake-parts/: flake.nix
tests/: flake.rs  lockfile_updates.rs
