[package]
name = "ns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "^1.0.75", features = ["backtrace"] }
clap = { version = "^4.4.7", features = ["derive"] }
clap-verbosity-flag = "^2.1.1"
colored = "2.1.0"
glob-match = "^0.2.1"
log = "^0.4.20"
querystring = "^1.1.0"
regex = "^1.10.2"
serde = { version = "^1.0.192", features = ["derive"] }
serde_json = "^1.0.108"
serde_variant = "^0.1.2"
simplelog = { version = "^0.12.1", features = ["paris"] }
toml = "^0.8.8"

[dev-dependencies]
insta = { version = "^1.34.0", features = ["json", "toml"] }
tempdir = "^0.3.7"
